<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecretTalk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <color name="yellow_Banana">#FFFF66</color>
    <color name="Brown_Banana">#731a1a</color>
	<color name="yellow_Gold">#FFD700</color>
    <string name="title_activity_talking_my_fragment">Talking_Activity</string>
    <string name="title_activity_setting_my_fragment">Setting_MyFragment</string>
    <string name="title_activity_listening_my_fragment">Listening_MyFragment</string>

    
    <!-- 主題的色彩  -->
    <color name="Banana">#FFD700</color>
    <color name="Banana_Brown">#731a1a</color>
    <color name="Banana_White">#FFFFFF</color>
    <color name="Banana_Gray">#E8E8E8</color>
    <color name="Banana_Gray_dark">#D4D4D4</color>
    <color name="Banana_light">#FFFFBB</color>
    <color name="Banana_Setting_Gray">#666666</color>
    <color name="Banana_Setting_Gray_light">#F5F5F5</color>
	
    <!--Bulletinboard -->
    <string name="Bulletinboard_title">公告</string>
    <string name="Bulletinboard_serverMessage">大家好！這裡是SecretTalk佈告欄，不定期會公布一些重要的訊息給使用者了解。</string>
    <string name="ServerWarning">即將與陌生人對話的使用者您好！為了注意自身安全，請使用者在對話過程中切勿公
        		開自己的個人資料(包括：地點、電話、真實姓名，甚至信用卡號等),以免有心人士使用。預祝您有良好的使用體驗。</string>
    
    
    
    <!-- 成就系統 -->
    <string name="intorduce">親愛的使用者你好，在SecretTalk中成為優良的傾聽者可以累積成就喔!鼓勵大家維護良好的互動喔!</string>
    <string name="introduce2">香蕉代表每個使用者的等級，\n香蕉越熟代表是愈優的傾聽者。</string>
    <string name="introduce3">斷線後的評價將會影響對方的等級。</string>
    <string name="level1">等級一：綠香蕉\n新手由此等開始</string>
    <string name="level2">等級二：生香蕉</string>
    <string name="level3">等級三：青香蕉</string>
    <string name="level4">等級四：熟香蕉</string>
    <string name="level5">等級五：甜香蕉</string>
    <string name="level_form">↓ 香蕉分級表</string>
    
    <!-- 程式導覽 -->
    <string name="nav_introduce">到底SecretTalk提供甚麼服務呢?\n這裡告訴你們如何使用SecretTalk?</string>
    <string name="nav_Step1">Step1.請使用者到設定頁，選擇您的設定：</string>
    <string name="nav_mood">心情</string>
    <string name="nav_interest">興趣</string>
    <string name="nav_personality">個性</string>
    <string name="nav_setting_end">按下確認儲存後即完成設定囉~!</string>
    <string name="nav_Step2">Step2.接著你可以到Talking頁面發文，與陌生人分享你的心事或煩惱。</string>
    <string name="nav_Step3">Step3.也記得到Listening頁面，關心遠方的陌生人，如果獲得好的評價有機會提升等級，讓你的香蕉越來越熟喔!</string>
    <string name="nav_rule">請記住！所有文章的連結將會在兩天後自動斷線！大家要把握48小時喔~!!</string>
    
    
    <!-- Setting 的標題 與內容  -->
    <string name="Setting_personaldata">個人基本資料</string>
    <string name="Setting_instantset">個人即時設定  ( 系統將以本資料決定連結 ) </string>
    <string name="Setting_moodchoose_title">現在你感覺?</string>
    <string name="Setting_interestchoose_title">你的興趣是?</string>
    <string name="Setting_personalitychoose_title">你覺得你這個人?</string>
    <color name="Setting_birthday_color">#FF6991</color>
    <color name="Setting_constellation">#FFE3D1</color>
    <color name="Setting_testcolor">#FFE478</color>
    <color name="Setting_username">#FFE3D1</color>
    <color name="Setting_gender">#A2D2FF</color>
    <string name="Setting_text_size">20dp</string>
    <string name="Setting_testname">小豬</string>
    <string name="Setting_testlogin_day">12</string>
    <string name="Setting_test_user_id">autobanana</string>
    <!-- 性別 -->
    <string name="Setting_sex">性別 :</string>
    <string-array name="Setting_Sex_array">
         <item>male</item>
         <item>female</item>
    </string-array>
    
    <string name="Setting_sign_english">Sign</string>
    <string-array name="Setting_sign_english_array">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>
    
    <string name="Setting_sign">星座 :</string>
    <string name="prompt">請選擇您的星座</string>
    <string-array name="Setting_sign_array">
        <item>白羊座 Aries		03/21~04/19</item>
        <item>金牛座 Taurus	04/20~05/20</item>
        <item>雙子座 Gemini	05/21~06/21</item>
        <item>巨蟹座 Cancer	06/22~07/22</item>
        <item>獅子座 Leo		07/23~08/22</item>
        <item>處女座 Virgo		08/23~9/22</item>
        <item>天秤座 Libra 	09/23~10/23</item>
        <item>天蠍座 Scorpio	10/24~11/22</item>
        <item>射手座 Sagittarius 11/23~12/21</item>
        <item>魔羯座 Capricorn 12/22~01/19</item>
        <item>水瓶座 Aquarius 	01/20~02/18</item>
        <item>雙魚座 Pisces 	02/19~03/20</item>
    </string-array>
    
    <string name="Setting_mood">心情 :</string>
    <string name="prompt_mood">請選擇您的心情</string>
    <string-array name="Setting_mood_array">
        <item>開心的</item>
        <item>憂鬱的</item>
        <item>平淡的</item>
        <item>快樂的</item>
        <item>幸福的</item>
        <item>生氣的</item>
        <item>生病的</item>
        <item>不爽的</item>
        <item>疲累的</item>
        <item>緊張的</item>
        <item>無奈的</item>
    </string-array>
    
    <string name="Setting_bloodtype_english">bloodtype</string>
    <string name="Setting_blood_A">A</string>
    <string name="Setting_blood_B">B</string>
    <string name="Setting_blood_AB">AB</string>
    <string name="Setting_blood_O">O</string>
    
    <string name="Setting_bloodtype">血型 :</string>
    <string-array name="Setting_bloodtype_array">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
     </string-array>
    
    
    <string name="Setting_career">職業</string>
    <string name="Setting_age">年齡</string>
    
    <string name="Setting_savecompleted">確認儲存</string>
    <string name="Setting_introduce">設定完成個人資料設定後，\n請記得按下『確認儲存』喔！</string>
    
    <string name="Talking_talk_button">分享</string>
    
    
    <!-- Talking   -->
    <string name="PostActivity_title">分享文章</string>
    <string name="PostActivity_dialog_title">請輸入你想分享的內容...</string>
    <string name="yes">確定</string>
    <string name="no">取消</string>
    <string name="post">分享</string>
    <string name="reply">回覆</string>
    <string name="server_talk">聽說和陌生人分享心情，\n是個不錯的舒壓辦法喔~!!</string>
    <string name="server_talk2">認真聽聽別人的感受，\n也能從中學到一課呢!~!!</string>
    <!-- login layout  -->
    <string name="login_title">Login</string>
    <string name="login_user_id">帳號</string>
    <string name="login_username">Username</string>
    <string name="login_password">密碼</string>
    <string name="login_passtext">Password</string>
    <string name="Login_login">登入</string>
    <string name="Login_register">註冊</string>
    <string name="login_try">試玩看看</string>
    <string name="login_introduce">感謝你安裝本程式，趕快來體驗SecretTalk吧！</string>
    
    
    <!-- register layout  -->
    <string name="Register_title">Register</string>
    <string name="Register_introduce">請填入以下資料註冊SecretTalk帳號。</string>
    <string name="Register_user_id">帳號</string>
    <string name="Register_password">密碼</string>
    <string name="Register_nickname">暱稱</string>
    <string name="Register_realname">真名</string>
    <string name="Register_birthday">生日</string>
    <string name="Register_year">年</string>
    <string name="Register_month">月</string>
    <string name="Register_day">日</string>
    <string name="Register_gender">性別</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="Register_constellation">星座</string>
    <string name="Register_boodtype">血型</string>
    <string name="Register_summit_and_register">送出註冊</string>
    <string name="Register_cancel">取消</string>
    <string name="Register_spinner_prompt">請選擇你的星座</string>
    <string name="Register_spinner_prompt_bloodtype">請選擇你的血型</string>
    
    
    <!--  -->
    <color name="Blue">#1719ff</color>
    <color name="Green">#19ff1c</color>
    <color name="Red">#FF1c19</color>
    <color name="Black">#000000</color>
    
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="action_refresh">重新整理</string>
    <string name="action_edit">編輯</string>
    <string name="action_search">搜尋</string>
    <string name="action_info">軟體資訊</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="leavingprogram">確定要離開 SecretTalk？</string>
    <string name="leave">離開程式</string>
    <string name="title_activity_about_program">AboutProgram</string>
    <string name="aboutprogram">關於 SecretTalk ...</string>
    <string name="Home">Home</string>
    <string name="Setting">設定</string>
    <string name="Talking">Talking(圖)</string>
    <string name="Listening">Listeming(圖)</string>
    <string name="name1">台南的爛滑鼠</string>
    <string name="content">4444</string>
    
	<string name="title_activity_login">LoginActivity</string>
    <string name="Login_LoginTitle">Login Page</string>
    <string name="Login_Username">Username</string>
    <string name="Login_Password">Password</string>
    <string name="Login_LoginButton">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="Register_TitleText">Register Page</string>
    <string name="Login_RegisterButtonText">Register</string>
    <string name="Register_UsernameText">Username</string>
    <string name="Register_PasswordText">Password</string>
    <string name="Register_NicknameTextView">Nickname</string>
    <string name="Register_RealnameText">Realname</string>
    <string name="Register_BirthdayText">Birthday</string>
    <string name="Register_RegisterButtonText">Register</string>
    <string name="Login_PostArticle">"Post "</string>
    <string name="Login_GetArtilceList">Get</string>
    <string name="Login_GetNewArticle">GetNewArticle</string>
    <string name="Register_SignText">Sign</string>
    <string name="Register_GenderText">Gender</string>
    <string name="Register_BloodTypeText">BloodType</string>
    <string name="Refresh">Refresh</string>
    <string name="Signout_title">SignOut</string>
    <string name="Signout_Button">登出</string>
    <string name="Signout_Nickname">暱稱</string>
    <string name="Signout_user_id">帳號</string>
    
    <!-- 關於本程式 -->
    <string name="about_program_tittle">About</string>
    <string name="about_program_Version">Version</string>
    <string name="about_program_VersionTextView">V 1.0</string>
    <string name="about_program_developer">Developer and Email</string>
    <string name="about_program_instructor">Instructor</string>
    <string name="about_program_develpoer1">Vicky\tmoeras16@gmail.com</string>
    <string name="about_program_develpoer2">Frank\ts124210@gmail.com</string>
    <string name="about_program_develpoer3">Kieth\th8990905@gmail.com</string>
    <string name="about_program_instructor1"></string>
    <string name="about_program_updatetitile">Update</string>
    <string name="about_program_updatetime">2014.7.18</string>
    <string name="about_program_speaktouser">如果有任何問題與建議，歡迎使用者聯繫我們，謝謝指教。</string>
    <string name="about_program_teamname">Team</string>
    <string name="about_program_AutoBanana">AutoBanana</string>
</resources>

