<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login_LinerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="@color/Red"
        android:gravity="center" >

        <TextView
            android:id="@+id/Login_TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_LoginTitle"
            android:textSize="40sp" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center">

        <TextView
            android:id="@+id/Login_UsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/Login_Username"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/Login_UsernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:ems="10" android:inputType="text">

            <requestFocus android:layout_width="wrap_content" />

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center" >

        <TextView
            android:id="@+id/Login_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/Login_Password"
            android:textSize="15sp" />

         <EditText
             android:id="@+id/Login_PasswordEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.6"
             android:ems="10" android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:gravity="center"  >

        <Button
            android:id="@+id/Login_LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_LoginButton" />

        <Button
            android:id="@+id/Login_RegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_RegisterButtonText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35" >

        <Button
            android:id="@+id/Login_PostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/Login_PostArticle"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Login_GetArticleList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/Login_GetArtilceList"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Login_GetNewArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/Login_GetNewArticle"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>