<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Banana"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="3.5"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_title"
            android:textColor="@color/Banana_White"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_introduce"
            android:textColor="@color/Banana_Setting_Gray_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/login_user_id"
                android:textColor="@color/Black"
                android:textSize="16sp"
                 />

            <EditText
                android:id="@+id/register_Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="請輸入帳號..."
                android:inputType="textPersonName"
                android:padding="3dp"
                android:textColorHint="@color/Banana_Gray_dark" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/login_password"
                android:textColor="@color/Black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="3dp"
                android:textColorHint="@color/Banana_Brown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textview_register_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/Register_nickname"
                android:textColor="@color/Black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="請輸入暱稱..."
                android:inputType="text"
                android:padding="3dp"
                android:textColorHint="@color/Banana_Gray_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/Register_realname"
                android:textColor="@color/Black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/register_realname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="請輸入您的真實姓名..."
                android:inputType="text"
                android:padding="3dp"
                android:textColorHint="@color/Banana_Gray_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/Register_birthday"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:inputType="number"
                android:padding="3dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_year" 
                android:textColor="@color/Black"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:inputType="number"
                android:padding="3dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_month"
                android:textColor="@color/Black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:inputType="numberSigned"
                android:padding="3dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_day"
                android:textColor="@color/Black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="10dp"
                android:text="@string/Register_gender"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sex_male"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_female"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="10dp"
                android:text="@string/Register_constellation"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center|center_vertical"
                android:layout_weight="1"
                android:clipChildren="false"
                android:prompt="@string/Register_spinner_prompt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="10dp"
                android:text="@string/Register_boodtype"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center|center_vertical"
                android:layout_weight="1"
                android:clipChildren="false"
                android:prompt="@string/Register_spinner_prompt_bloodtype" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.9"
            android:gravity="center" >

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/textview_background"
                android:padding="6dp"
                android:text="@string/Register_cancel" />

            <Button
                android:id="@+id/PostArticle_PostButton2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@color/textview_background"
                android:padding="6dp"
                android:text="@string/Register_summit_and_register" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>