<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_Banana"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Register_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_TitleText"
            android:textSize="40sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/Register_UsernameRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/Register_UsernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_UsernameText" />

            <EditText
                android:id="@+id/Register_UsernameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:ems="10" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/Register_PasswordRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/Register_PasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_PasswordText" />

            <EditText
                android:id="@+id/Register_PasswordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:id="@+id/Register_NicknameRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/Register_NicknameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_NicknameTextView" />

            <EditText
                android:id="@+id/Register_NicknameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/Register_RealnameRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center">

            <TextView
                android:id="@+id/Register_RealnameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_RealnameText" />

            <EditText
                android:id="@+id/Register_RealnameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/Register_BirthdayRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/Register_BirthdayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_BirthdayText" />

            <EditText
                android:id="@+id/Register_BirthdayEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/Register_RegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_RegisterButtonText" />

    </LinearLayout>

</LinearLayout>